examples/semantics/errors/error4a.grace
fun error4a () : nothing
{
	 putc(chr(ord('a')));
}
